Update and rename calc.html.txt to calc.html

--- a/calc.html
+++ b/calc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>계산기 - 유승현</title>
+    <title>계산기 - 노연섭</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* 추가적인 그리드 간격 보정 */
@@ -96,4 +96,5 @@
         });
     </script>
 </body>
+
 </html>
