--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
@@ -22,9 +21,10 @@
       </div>
 
       <nav class="flex items-center gap-6">
-        <a class="text-sm font-bold text-blue-600" href="index.html">Home</a>
         <a class="text-sm text-gray-700 hover:text-blue-500" href="about.html">About</a>
-        <a class="text-sm text-gray-700 hover:text-blue-500" href="calculator.html">Calculator</a>
+        <a class="text-sm text-gray-700 hover:text-blue-500" href="#skills">Skills</a>
+        <a class="text-sm text-gray-700 hover:text-blue-500" href="#projects">Projects</a>
+        <a class="text-sm text-gray-700 hover:text-blue-500" href="#contact">Contact</a>
       </nav>
     </header>
 
@@ -39,11 +39,11 @@
         </p>
 
         <div class="mt-8 flex gap-3">
-          <a href="about.html" class="px-6 py-2.5 rounded-xl text-sm font-semibold bg-[#3b3b4b] text-white hover:bg-opacity-90 transition-all">
-            상세 프로필 보기
+          <a href="#projects" class="px-6 py-2.5 rounded-xl text-sm font-semibold bg-[#3b3b4b] text-white hover:bg-opacity-90 transition-all">
+            프로젝트 보기
           </a>
-          <a href="calculator.html" class="px-6 py-2.5 rounded-xl text-sm font-semibold border border-gray-300 hover:bg-gray-50 transition-all">
-            계산기 실행
+          <a href="#contact" class="px-6 py-2.5 rounded-xl text-sm font-semibold border border-gray-300 hover:bg-gray-50 transition-all">
+            연락하기
           </a>
         </div>
       </div>
@@ -51,9 +51,108 @@
       <div class="flex flex-col items-center gap-3">
         <div class="h-32 w-32 rounded-full border-4 border-gray-100 shadow-lg overflow-hidden bg-gray-200">
           <img src="https://blogpfthumb-phinf.pstatic.net/MjAyNjAxMDZfMjA0/MDAxNzY3Njk3NTgzNzk3.cNmvSSY5cvwv348zngUPhG0A3Oa5J1hhcm2FgnqhoTgg.KlGPdn5BxUWiF8OpZIhf4_6QFQfzSH17ye07r6TYc84g.JPEG/KakaoTalk_20251103_125101243.jpg/KakaoTalk_20251103_125101243.jpg?type=w161" 
-               alt="프로필 이미지" class="w-full h-full object-cover" />
+               alt="대기 이미지" class="w-full h-full object-cover" />
         </div>
       </div>
+    </section>
+
+    <section id="skills" class="mt-8 rounded-2xl border border-gray-200 bg-white overflow-hidden shadow-sm">
+      <div class="p-6 border-b border-gray-100">
+        <h2 class="text-xl font-bold">Skills</h2>
+        <p class="text-sm text-gray-500">관심 분야 및 기술 스택</p>
+      </div>
+
+      <div class="divide-y divide-gray-100">
+        <div class="p-6">
+          <p class="text-sm font-bold text-gray-400 uppercase tracking-wider mb-4">Tech Stack</p>
+          <div class="flex flex-wrap gap-2">
+            <span class="rounded-lg bg-blue-50 text-blue-700 px-3 py-1.5 text-xs font-bold">React</span>
+            <span class="rounded-lg bg-gray-100 text-gray-700 px-3 py-1.5 text-xs font-bold">Next.js</span>
+            <span class="rounded-lg bg-blue-100 text-blue-800 px-3 py-1.5 text-xs font-bold">TypeScript</span>
+            <span class="rounded-lg bg-[#3b3b4b] text-white px-3 py-1.5 text-xs font-bold">Tailwind CSS</span>
+          </div>
+        </div>
+
+        <div class="p-6">
+          <p class="text-sm font-bold text-gray-400 uppercase tracking-wider mb-4">Profile Details</p>
+          <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
+            <div class="rounded-xl border border-gray-100 p-4 bg-gray-50">
+              <p class="text-sm font-bold mb-1">About Me</p>
+              <p class="text-xs text-gray-600 leading-5">한림대학교 환경생명공학과<br>4학년 재학중</p>
+            </div>
+            <div class="rounded-xl border border-gray-100 p-4 bg-gray-50">
+              <p class="text-sm font-bold mb-1">Interest</p>
+              <p class="text-xs text-gray-600 leading-5">폐수처리 · 환경공학<br>실험 및 데이터 분석</p>
+            </div>
+            <div class="rounded-xl border border-gray-100 p-4 bg-gray-50">
+              <p class="text-sm font-bold mb-1">Currently</p>
+              <p class="text-xs text-gray-600 leading-5">부학생회장 활동 및<br>환경대기기사 취득 준비</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects" class="mt-8">
+      <h2 class="text-xl font-bold mb-4 px-1">Projects</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        
+        <a href="calculator.html" class="block group">
+          <article class="h-full rounded-2xl border border-gray-200 bg-white p-6 shadow-sm group-hover:border-[#3b3b4b] transition-all">
+            <div class="flex justify-between items-start mb-2">
+              <h3 class="font-bold text-lg group-hover:text-[#3b3b4b]">Calculator</h3>
+              <span class="text-xs font-bold text-blue-600 bg-blue-50 px-2 py-1 rounded">Open</span>
+            </div>
+            <p class="text-sm text-gray-600 mb-4">
+              Bootstrap을 활용한 웹 계산기 프로젝트입니다. 사칙연산 기능을 제공합니다.
+            </p>
+            <div class="flex gap-2">
+              <span class="text-[10px] font-bold bg-gray-100 px-2 py-1 rounded text-gray-500 uppercase">Bootstrap</span>
+              <span class="text-[10px] font-bold bg-gray-100 px-2 py-1 rounded text-gray-500 uppercase">JavaScript</span>
+            </div>
+          </article>
+        </a>
+
+        <a href="about.html" class="block group">
+          <article class="h-full rounded-2xl border border-gray-200 bg-white p-6 shadow-sm group-hover:border-[#3b3b4b] transition-all">
+            <div class="flex justify-between items-start mb-2">
+              <h3 class="font-bold text-lg group-hover:text-[#3b3b4b]">Detailed Portfolio</h3>
+              <span class="text-xs font-bold text-green-600 bg-green-50 px-2 py-1 rounded">Update</span>
+            </div>
+            <p class="text-sm text-gray-600 mb-4">
+              저에 대한 더 자세한 정보를 담고 있는 독립된 자기소개 페이지입니다.
+            </p>
+            <div class="flex gap-2">
+              <span class="text-[10px] font-bold bg-gray-100 px-2 py-1 rounded text-gray-500 uppercase">HTML</span>
+              <span class="text-[10px] font-bold bg-gray-100 px-2 py-1 rounded text-gray-500 uppercase">Tailwind</span>
+            </div>
+          </article>
+        </a>
+      </div>
+    </section>
+
+    <section id="contact" class="mt-8 rounded-2xl border border-gray-200 bg-white p-6 shadow-sm">
+      <h2 class="text-xl font-bold">Contact</h2>
+      <p class="text-sm text-gray-500 mb-6">문의사항이 있으시면 아래 양식을 통해 메시지를 남겨주세요.</p>
+
+      <form class="flex flex-col gap-4">
+        <div>
+          <label class="block text-sm font-bold text-gray-700 mb-1">Email</label>
+          <input class="w-full rounded-xl border border-gray-200 bg-gray-50 px-4 py-3 text-sm focus:outline-none focus:ring-2 focus:ring-[#3b3b4b]/20 focus:bg-white transition-all" 
+                 type="email" placeholder="example@hallym.ac.kr" />
+        </div>
+
+        <div>
+          <label class="block text-sm font-bold text-gray-700 mb-1">Message</label>
+          <textarea class="w-full rounded-xl border border-gray-200 bg-gray-50 px-4 py-3 text-sm focus:outline-none focus:ring-2 focus:ring-[#3b3b4b]/20 focus:bg-white transition-all resize-none" 
+                    rows="4" placeholder="메시지를 입력해 주세요."></textarea>
+        </div>
+
+        <button class="w-full py-3 rounded-xl bg-[#3b3b4b] text-white font-bold text-sm hover:bg-opacity-90 transition-all shadow-md active:scale-[0.98]" 
+                type="button">
+          보내기
+        </button>
+      </form>
     </section>
 
     <footer class="mt-12 mb-8 text-center border-t border-gray-200 pt-8">
