--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div>
           <p class="font-bold text-lg">노연섭</p>
-          <p class="text-sm text-gray-600">한림대학교 / 4학년</p>
+          <p class="text-sm text-gray-600">한림대학교 / 3학년</p>
         </div>
       </div>
 
@@ -78,7 +78,7 @@
           <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
             <div class="rounded-xl border border-gray-100 p-4 bg-gray-50">
               <p class="text-sm font-bold mb-1">About Me</p>
-              <p class="text-xs text-gray-600 leading-5">한림대학교 환경생명공학과<br>4학년 재학중</p>
+              <p class="text-xs text-gray-600 leading-5">한림대학교 환경생명공학과<br>3학년 재학중</p>
             </div>
             <div class="rounded-xl border border-gray-100 p-4 bg-gray-50">
               <p class="text-sm font-bold mb-1">Interest</p>
@@ -104,7 +104,7 @@
               <span class="text-xs font-bold text-blue-600 bg-blue-50 px-2 py-1 rounded">Open</span>
             </div>
             <p class="text-sm text-gray-600 mb-4">
-              Bootstrap을 활용한 웹 계산기 프로젝트입니다. 사칙연산 기능을 제공합니다.
+              Tailwind 를를 활용한 웹 계산기 프로젝트입니다. 사칙연산 기능을 제공합니다.
             </p>
             <div class="flex gap-2">
               <span class="text-[10px] font-bold bg-gray-100 px-2 py-1 rounded text-gray-500 uppercase">Bootstrap</span>
@@ -161,3 +161,4 @@
   </div>
 </body>
 </html>
+
